Add PEW deletion to rest-api Improve error handling and messages
