# kubernetes/src/rest-api/spec/openapi.yaml
@@ -7,7 +7,7 @@ info:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
-  x-creation-date: '2026-08-25T18:59:14'
+  x-creation-date: '2026-08-25T21:16:50'
 servers:
 - url: /
   description: PTX Edge Computing
@@ -56,24 +56,80 @@ paths:
           content:
             application/json:
               schema: {}
-  /workers/{worker_name}:
+  /workers/{name}:
     put:
-      summary: Create Worker
-      description: Create PTX Edge Computing worker
-      operationId: create_worker_workers__worker_name__put
+      tags:
+      - customerAPI
+      summary: Create Named Worker
+      description: Create PTX-Edge worker with given name
+      operationId: create_named_worker_workers__name__put
       parameters:
-      - name: worker_name
+      - name: name
         in: path
         required: true
         schema:
           type: string
-          title: Worker Name
+          pattern: ^[a-zA-Z0-9_-]+$
+          title: Name
       requestBody:
         required: true
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/PEW'
+      responses:
+        '201':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PTXEdgeWorkerResponse'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+    delete:
+      tags:
+      - customerAPI
+      summary: Delete Named Worker
+      description: Delete PTX-Edge worker with given name
+      operationId: delete_named_worker_workers__name__delete
+      parameters:
+      - name: name
+        in: path
+        required: true
+        schema:
+          type: string
+          pattern: ^[a-zA-Z0-9_-]+$
+          title: Name
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PTXEdgeWorkerResponse'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  /workers:
+    post:
+      tags:
+      - customerAPI
+      summary: Create Default Worker
+      description: Create PTX-Edge worker with autogenerated name
+      operationId: create_default_worker_workers_post
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PEW'
+        required: true
       responses:
         '201':
           description: Successful Response
@@ -730,6 +786,11 @@ components:
         status:
           $ref: '#/components/schemas/PTXEdgeWorkerStatus'
           description: Worker deployment status
+        resource:
+          additionalProperties: true
+          type: object
+          title: Resource
+          description: Worker resource
       type: object
       required:
       - status
@@ -740,6 +801,7 @@ components:
       enum:
       - initialized
       - error
+      - terminating
       title: PTXEdgeWorkerStatus
     ValidationError:
       properties:
